Changes in @NEW@:
  o New Features:
    * Standalone server now prints a message if it fails to import the REST
      api.
    * Added restore command which restores file ownership to troves which
      they were removed from (because of a remove operation or --replace-files)

  o Internal Changes:
    * Fetching path hashes from a changeset now uses absolute trove info
      when available (which it is for any not-incredibly-old server) instead
      of merging differential trove info with database trove info for a
      significant speedup of update planning.

  o Bug Fixes:
    * A consistent exception is now raised when bad XML-RPC data is fed
      into conary's parser on systems without the sgmlop package installed.
      (CNY-3180)

Changes in 2.0.44:
  o New Features:
    * Conary can now be configured with a set of certificate authorities
      (trustedCerts) against which all secure repository access will be
      validated. (CNY-2735)
    * Conary now logs the starting, output, and error exit codes of
      trove scripts to the /var/log/conary file. (CNY-3150)
    * The "conary updateall" command now honors the --just-db
      option. (CNY-3167)
    * The EULA_Conary.txt file has been renamed to
      EULA_Conary_Dual_License.txt in order to highlight the contents
      of the beginning of the file, which describe a choice of license
      terms.  The contents of the file are not changed, and the licenses
      under which Conary may be used are not changed. (CNY-3168)
    * The SetModes build action now takes an optional allowNoMatch
      keyword argument, that causes a warning to be printed instead of
      failing the build when the target file does not exist. (CNY-3171)

  o API Changes:
    * Added removeInvalidRollbacks() to client API. (CNY-2933)
    * The conary.lib.mainhandler.MainHandler.main() method now sets
      sys.excepthook only if the setSysExcepthook method variable
      is True (as it is by default), allowing subclasses to take